--- a/src/static/index.html
+++ b/src/static/index.html
@@ -16,6 +16,10 @@
     <script src="js/react-dom.production.min.js"></script>
     <script src="js/react-bootstrap.js"></script>
     <script src="js/babel.min.js"></script>
+    <script type="text/babel" src="js/components/ItemDisplay.js"></script>
+    <script type="text/babel" src="js/components/AddItemForm.js"></script>
+    <script type="text/babel" src="js/components/TodoListCard.js"></script>
+    <script type="text/babel" src="js/components/App.js"></script>
     <script type="text/babel" src="js/app.js"></script>
 </body>
 </html>
